2009-02-19  Marek Habersack  <mhabersack@novell.com>

	* ApplicationHost.cs: added support for the
	__MONO_DOMAIN_ID_SUFFIX environment variable, used by mod_mono.

2008-10-29  Marek Habersack  <mhabersack@novell.com>

	* ApplicationHost.cs: set domain setup CachePath to the same value
	as DynamicBase, so that shadow-copied assemblies appear under the
	same location what generated files.

2008-05-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* VirtualPathProvider.cs: Removed debug code.

2008-04-08  Marek Habersack  <mhabersack@novell.com>

	* DefaultVirtualDirectory.cs: fixed the constructor - derive
	virtual directory from the original path.
	AddDirectories and AddFiles combine the virtual paths properly
	now.

2008-04-01  Marek Habersack  <mhabersack@novell.com>

	* HostingEnvironment.cs: initialize custom VPP on
	registration.
	Added an internal boolena property to signal if we're using a
	custom VPP or not (HaveCustomVPP)

2008-03-31  Marek Habersack  <mhabersack@novell.com>

	* VirtualPathProvider.cs: internal SetPrevious method renamed to
	InitializeAndSetPrevious.

2008-03-27  Marek Habersack  <mhabersack@novell.com>

	* DefaultVirtualPathProvider.cs: support relative virtual paths in
	all the methods.

	* VirtualPathProvider.cs: FileExists should chain to the previous
	handler, if present.

2008-03-13  Marek Habersack  <mhabersack@novell.com>

	* ApplicationHost.cs: use HttpRuntime.CaseInsensitive when
	checking whether we're running in a case-insensitive environment.
	Revert to the single-bin-dir behavior when setting the
	PrivateBinPath - the directories are sought for in the order given
	by HttpApplication.BinDirs and the first existing directory is set
	as the value of PrivateBinPath. If none of those are found,
	PrivateBinPath defaults to "bin" (and "/app/full/path/bin" in the
	2.0 profile)

2008-03-12  Marek Habersack  <mhabersack@novell.com>

	* DefaultVirtualPathProvider.cs: disable throwing an exception