@@ -1,3 +1,8 @@
+2009-07-09 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* SimpleWorkerRequest.cs: store the root web configuration path in a
+	static variable.
+
 2009-02-19  Marek Habersack  <mhabersack@novell.com>
 
 	* ApplicationHost.cs: added support for the
